<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.leonarduk</groupId>
	<artifactId>webscraper-core</artifactId>
	<version>1.0.1-SNAPSHOT</version>
	<name>Core</name>
	<description>Infrastructure classes</description>
	<url>http://leonarduk.com/maven2</url>
	<prerequisites>
		<maven>2.2.1</maven>
	</prerequisites>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<log4j.version>1.2.17</log4j.version>
		<junit.version>4.11</junit.version>
		<java.version>1.8</java.version>
		<powermock.version>1.6.1</powermock.version>
		<mockito.version>1.9.5</mockito.version>
		<javax.mail.version>1.4</javax.mail.version>
		<selenium.version>2.47.1</selenium.version>
	</properties>
	<repositories>
	
		<repository>
			<id>central.maven.org</id>
			<url>http://central.maven.org/maven2/</url>
		</repository>
	</repositories>
	<build>
		<defaultGoal>deploy</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<verbose>true</verbose>
					<fork>true</fork>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgument>-Xlint:all</compilerArgument>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
						<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.3</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<systemPropertyVariables>
						<databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>
					</systemPropertyVariables>
					<workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
				</configuration>
			</plugin>
		</plugins>
		
	</build>
	<dependencies>
		<!-- selenium -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.47.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<!-- end of selenium -->

		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Logging -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<!-- Email -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>${javax.mail.version}</version>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- database -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>3.6.8.Final</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.8.2.2</version>
			<scope>runtime</scope>
		</dependency>
		<!-- an slf4j implementation is needed by hibernate so that it could log 
			its *stuff* -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.6.4</version>
			<scope>runtime</scope>
		</dependency>
	</dependencies>
	<organization>
		<name>Leonard UK Ltd</name>
		<url>http://leonarduk.com</url>
	</organization>
	<inceptionYear>2014</inceptionYear>
	<licenses>
		<license>
			<name>GNU General Public License v3.0 or later</name>
			<url>http://www.spdx.org/licenses/GPL-3.0+</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>leonarduk</id>
			<name>Stephen Leonard</name>
			<email>sourceforge@leonarduk.com</email>
			<roles>
				<role>Project Manager</role>
				<role>Architect</role>
				<role>Developer</role>
			</roles>
			<organization>Leonard UK Ltd</organization>
			<organizationUrl>http://leonarduk.com</organizationUrl>
			<timezone>0</timezone>
			<url>http://uk.linkedin.com/in/steveleonard/</url>
		</developer>
	</developers><!-- to get to sona type and onto maven central -->
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
			</url>
		</repository>
	</distributionManagement>
</project>
